--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   mongodb:
-      image: mongo:latest
+      image: mongo:3.4.14
       container_name: "mongodb"
       environment:
         - MONGO_DATA_DIR=/data/db
